[package]
name = "reth-blockchain-tree"

[lints]
workspace = true

[dependencies]
lru = "0.12"
linked_hash_set = "0.1.4"

[features]
test-utils = []
optimism = [ "reth-primitives/optimism", "reth-interfaces/optimism", "reth-provider/optimism", "reth-revm/optimism",]

[package.version]
workspace = true

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.license]
workspace = true

[package.homepage]
workspace = true

[package.repository]
workspace = true

[dependencies.reth-primitives]
workspace = true

[dependencies.reth-interfaces]
workspace = true

[dependencies.reth-db]
workspace = true

[dependencies.reth-provider]
workspace = true

[dependencies.reth-stages]
workspace = true

[dependencies.reth-trie]
workspace = true

[dependencies.parking_lot]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tokio]
workspace = true
features = [ "macros", "sync",]

[dependencies.reth-metrics]
workspace = true
features = [ "common",]

[dependencies.metrics]
workspace = true

[dev-dependencies.reth-db]
workspace = true
features = [ "test-utils",]

[dev-dependencies.reth-interfaces]
workspace = true
features = [ "test-utils",]

[dev-dependencies.reth-primitives]
workspace = true
features = [ "test-utils",]

[dev-dependencies.reth-provider]
workspace = true
features = [ "test-utils",]

[dev-dependencies.reth-revm]
workspace = true

[dev-dependencies.reth-node-ethereum]
workspace = true

[dev-dependencies.reth-node-optimism]
workspace = true

[dev-dependencies.parking_lot]
workspace = true

[dev-dependencies.assert_matches]
workspace = true
