[package]
name = "reth-blockchain-tree"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-blockchain-tree-api.workspace = true
reth-primitives.workspace = true
reth-storage-errors.workspace = true
reth-execution-errors.workspace = true
reth-db.workspace = true
reth-db-api.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-provider.workspace = true
reth-execution-types.workspace = true
reth-stages-api.workspace = true
reth-trie = { workspace = true, features = ["metrics"] }
reth-trie-db = { workspace = true, features = ["metrics"] }
reth-trie-parallel.workspace = true
reth-network.workspace = true
reth-consensus.workspace = true
reth-node-types.workspace = true

# ethereum
alloy-primitives.workspace = true
alloy-eips.workspace = true

# common
parking_lot.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }

# metrics
reth-metrics = { workspace = true, features = ["common"] }
metrics.workspace = true

# misc
aquamarine.workspace = true
linked_hash_set.workspace = true

[dev-dependencies]
reth-chainspec.workspace = true
reth-db = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-evm = { workspace = true, features = ["test-utils"] }
reth-consensus = { workspace = true, features = ["test-utils"] }
reth-testing-utils.workspace = true
reth-revm.workspace = true
reth-evm-ethereum.workspace = true
reth-execution-types.workspace = true
parking_lot.workspace = true
assert_matches.workspace = true
alloy-genesis.workspace = true
alloy-consensus.workspace = true

[features]
test-utils = [
	"reth-chainspec/test-utils",
	"reth-consensus/test-utils",
	"reth-evm/test-utils",
	"reth-network/test-utils",
	"reth-primitives/test-utils",
	"reth-revm/test-utils",
	"reth-stages-api/test-utils",
	"reth-db/test-utils",
	"reth-db-api/test-utils",
	"reth-provider/test-utils",
	"reth-trie-db/test-utils",
	"reth-trie/test-utils"
]
optimism = [
	"reth-primitives/optimism",
	"reth-provider/optimism",
	"reth-execution-types/optimism",
	"reth-db/optimism",
	"reth-db-api/optimism"
]
