[package]
name = "reth-codecs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/reth"
readme = "README.md"

[features]
default = ["scale"]
compact = ["codecs-derive/compact"]
scale = ["codecs-derive/scale"]
postcard = ["codecs-derive/postcard"]
no_codec = ["codecs-derive/no_codec"]

[dependencies]
bytes = "1.2.1"
codecs-derive = { version = "0.1.0", path = "./derive", default-features = false }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }

[dev-dependencies]
serde = "1.0"
modular-bitfield = "0.11.2"
test-fuzz = "3.0.4"