[package]
name = "reth-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["serde"]
serde = [
    "dep:serde",
    "reth-network-types/serde",
    "reth-prune-types/serde",
    "reth-stages-types/serde",
]

[dependencies]
# reth
reth-network-types = { workspace = true }
reth-prune-types = { workspace = true }
reth-stages-types = { workspace = true }

# serde
serde = { workspace = true, optional = true }
humantime-serde.workspace = true

# toml
toml.workspace = true
eyre.workspace = true

[dev-dependencies]
tempfile.workspace = true
reth-network-peers.workspace = true
alloy-primitives.workspace = true