[package]
name = "reth-consensus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
readme = "README.md"

[dependencies]
# reth 
reth-primitives = { path = "../primitives" }
reth-interfaces = { path = "../interfaces" }
reth-provider = { path = "../storage/provider" }
reth-rlp = { path = "../common/rlp" }
reth-rpc-types = { path = "../net/rpc-types" }
reth-executor = { path = "../executor" }

# async
futures = "0.3"
async-trait = "0.1.57"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

# misc
thiserror = "1.0.37"
auto_impl = "1.0"
serde = { version = "1.0", optional = true }

[dev-dependencies]
reth-interfaces = { path = "../interfaces", features = ["test-utils"] }
reth-provider = { path = "../storage/provider", features = ["test-utils"] }
assert_matches = "1.5.0"
bytes = "1.2"

[features]
serde = ["dep:serde"]
