[package]
name = "reth-db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foundry-rs/reth"
readme = "README.md"
description = "Staged syncing primitives used in reth."

[dependencies]
# reth
reth-primitives = { path = "../primitives" }

# misc
bytes = "1.2.1"
libmdbx = "0.1.8"
page_size = "0.4.2"
thiserror = "1.0.37"

[dev-dependencies]
tempfile = "3.3.0"
