[package]
name = "reth-db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paradigmxyz/reth"
readme = "README.md"
description = "Staged syncing primitives used in reth."

[dependencies]
# reth
reth-primitives = { path = "../primitives" }
reth-interfaces = { path = "../interfaces" }
reth-libmdbx = { path = "../libmdbx-rs" }

# codecs
serde = { version = "1.0.*", default-features = false }
postcard = { version = "1.0.2", features = ["alloc"] }
parity-scale-codec = { version = "3.2.1", features = ["bytes"] }

# misc
bytes = "1.2.1"
page_size = "0.4.2"
thiserror = "1.0.37"
tempfile = { version = "3.3.0", optional = true }
eyre = "0.6.8"

[dev-dependencies]
tempfile = "3.3.0"
test-fuzz = "3.0.4"
criterion = "0.4.0"
iai = "0.1.1"
tokio = { version = "1.21.2", features = ["full"] }

reth-interfaces = { path = "../interfaces",features=["bench"] }
async-trait = "0.1.58"

[features]
test-utils = ["tempfile"]
bench-postcard = ["bench"]
bench = []

[[bench]]
name = "encoding_crit"
harness = false

[[bench]]
name = "encoding_iai"
harness = false
