[package]
name = "dev-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-chainspec.workspace = true
reth-beacon-consensus.workspace = true
reth-primitives.workspace = true
reth-execution-errors.workspace = true
reth-execution-types.workspace = true
reth-network-p2p.workspace = true
reth-provider.workspace = true
reth-stages-api.workspace = true
reth-revm.workspace = true
reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-engine-primitives.workspace = true
reth-consensus.workspace = true
reth-rpc-types.workspace = true
reth-network-peers.workspace = true
reth-tokio-util.workspace = true
reth-payload-builder.workspace = true
reth-blockchain-tree-api.workspace = true
reth-chain-state = { workspace = true, features = ["test-utils"] }
tracing.workspace = true
tokio.workspace = true
futures-util = "0.3.30"

# async
tokio-stream.workspace = true


