[package]
name = "era-export"
description = "Export history from db to era1 files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]

[lints]
workspace = true