[package]
name = "era-export"
description = "Export history from db to era1 files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# reth
reth-db-api.workspace = true
reth-era.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true

# obs
tracing.workspace = true

# error
eyre.workspace = true

[lints]
workspace = true
