[package]
name = "era-export"
description = "Export history from db to era1 files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
# alloy
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true

# reth
reth-db-api.workspace = true
reth-era.workspace = true
reth-ethereum-primitives.workspace = true
reth-fs-util.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api = { workspace = true, features = ["db-api"] }

# obs
tracing.workspace = true

# error
eyre.workspace = true

[dev-dependencies]
# reth
reth-db-common.workspace = true
reth-etl.workspace = true
reth-era-downloader.workspace = true
reth-era-import.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }

reqwest.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
tempfile.workspace = true

[lints]
workspace = true
