[package]
name = "reth-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-consensus.workspace = true
reth-execution-errors.workspace = true
reth-fs-util = { workspace = true, optional = true }
reth-storage-errors.workspace = true

# misc
thiserror.workspace = true

[features]
default = ["std"]
std = [
    "reth-fs-util",
    "reth-consensus/std",
    "reth-execution-errors/std",
    "reth-storage-errors/std",
    "thiserror/std",
]
