[package]
name = "reth-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
reth-consensus.workspace = true
reth-execution-errors.workspace = true
reth-storage-errors.workspace = true

# misc
thiserror.workspace = true

[features]
std = [
    "reth-consensus/std",
    "reth-execution-errors/std",
    "reth-storage-errors/std",
    "thiserror/std",
]
